k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokengen-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokengen-backend
  template:
    metadata:
      labels:
        app: tokengen-backend
    spec:
      containers:
      - name: backend
        image: elmimoha15/tokengen-backend:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: tokengen-backend-service
spec:
  type: NodePort  
  selector:
    app: tokengen-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
